# django-example-rels

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.docker/database/: 01_create_db.sql
src/app/: settings.py  urls.py
src/app/common/: models.py  uuid.py
src/apps/helloworld/: apps.py  urls.py  views.py
src/apps/relation/: apps.py  models.py  serializers.py  urls.py  views.py
src/seeds/: seed_relation.py
